[gd_scene load_steps=7 format=2]

[ext_resource path="res://Canvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://draw_frame.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Lazy Morning DEMO.otf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 450, 226.37 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="KontainerBidang" type="Node2D" parent="."]

[node name="Bidang" parent="KontainerBidang" instance=ExtResource( 1 )]
position = Vector2( 68, 82 )

[node name="DrawFrame" type="Sprite" parent="."]
position = Vector2( 514.988, 307.657 )
texture = ExtResource( 2 )

[node name="DrawArea" type="Area2D" parent="."]
position = Vector2( 68, 82 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawArea"]
position = Vector2( 446, 225 )
shape = SubResource( 1 )

[node name="Export" type="Button" parent="."]
margin_left = 61.731
margin_top = 21.4344
margin_right = 173.731
margin_bottom = 41.4344
custom_fonts/font = SubResource( 2 )
text = "Expor Koordinat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="Button" parent="."]
margin_left = 830.493
margin_top = 22.8663
margin_right = 968.493
margin_bottom = 67.8663
custom_fonts/font = SubResource( 2 )
text = "Mode Layar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="DrawArea" to="." method="_on_DrawArea_input_event"]
[connection signal="pressed" from="Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="Mode" to="." method="_on_Mode_pressed"]
